# uva-lang

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  LICENSE  README.md  a.txt  file.xsd  natvis.xml  test.xml  uva-pm.json  uva-pm.txt
.github/workflows/: build-ubuntu-18.04.yml  build-ubuntu-20.04.yml  build-ubuntu-22.04.yml  build-windows-2022.yml  build.yml
cmake/: andy-langConfig.cmake.in
compiler/: CMakeLists.txt
compiler/src/: compiler.cpp
examples/: all.andy  all.uva  array.andy  array.uva  base_class.andy  base_class.uva  complex_expressions.andy  complex_expressions.uva  dictionary.uva  file.andy  file.uva  foreach.andy  foreach.uva  function.andy  if.andy  if.uva  minimal.uva  output.uva  return.andy  syntax.uva  system.andy  variable.andy  while.uva
experiments/: hello.sh  launching.sh  launching.uva
experiments/uva-drawing/: CMakeLists.txt
experiments/uva-drawing/include/uva/: drawing.hpp  os_specific_data_member.hpp
experiments/uva-drawing/src/: frame.gtk+-3.0.cpp  gtk3+-3.0.hpp  hardware_renderer.cpp  memory_surface.gtk+-3.0.cpp  software_renderer.gtk+-3.0.cpp  texture_surface.cpp
experiments/uva-renderer/: CMakeLists.txt  layout.cpp  layout.hpp  main.cpp  old.cpp
experiments/uva-renderer/uva-tests/uva-widgets/: layout_spec.cpp
extension/: extension.hpp
extension/src/: extension.cpp
include/andy/lang/: andy_config_class.hpp  api.hpp  array_class.hpp  class.hpp  config.hpp  dictionary_class.hpp  double_class.hpp  extension.hpp  false_class.hpp  file_class.hpp  float_class.hpp  integer_class.hpp  interpreter.hpp  lang.hpp  lexer.hpp  method.hpp  null_class.hpp  object.hpp  parser.hpp  path_class.hpp  preprocessor.hpp  std_class.hpp  string_class.hpp  system_class.hpp  true_class.hpp
include/uva/lang/: array_class.hpp  class.hpp  dictionary_class.hpp  double_class.hpp  extension.hpp  false_class.hpp  file_class.hpp  float_class.hpp  integer_class.hpp  interpreter.hpp  lang.hpp  lexer.hpp  method.hpp  null_class.hpp  object.hpp  parser.hpp  preprocessor.hpp  std_class.hpp  string_class.hpp  true_class.hpp
interpreter/: CMakeLists.txt  interpreter.hpp
interpreter/src/: interpreter.cpp
lang/: CMakeLists.txt  add_operators.hpp  array_class.hpp  class.hpp  dictionary_class.hpp  double_class.hpp  false_class.hpp  file_class.hpp  float_class.hpp  integer_class.hpp  lang.hpp  method.hpp  null_class.hpp  object.hpp  std_class.hpp  string_class.hpp  true_class.hpp
lang/src/: array_class.cpp  class.cpp  dictionary_class.cpp  double_class.cpp  false_class.cpp  file_class.cpp  float_class.cpp  integer_class.cpp  method.cpp  null_class.cpp  object.cpp  std_class.cpp  string_class.cpp  true_class.cpp
languanizer/: CMakeLists.txt  languanizer.hpp
languanizer/src/: languanizer.cpp
lexer/: CMakeLists.txt  cursor.hpp  lexer.hpp
lexer/src/: cursor.cpp  lexer.cpp
parser/: class.hpp  method.hpp  object.hpp  parser.cpp  parser.hpp  source_cursor.cpp  source_cursor.hpp
preprocessor/: CMakeLists.txt  preprocessor.hpp
preprocessor/src/: preprocessor.cpp
samples/: all.uva  base_class.uva  calculator.uva  dictionary.uva  file.uva  foreach.uva  function.uva  hello_world.uva  if.uva  output.uva  return.uva  system.uva  ui.uva  variable.uva
samples/uva-ui/calculator/: application.uva
samples/uva-ui/calculator/frames/: calculator_frame.uva  calculator_frame.xml
samples/uva-ui/calculator/styles/: application_style.uva
samples/uva-ui/calculator/themes/: dark_theme.uva
samples2/uva-ui/calculator/frames/: calculator_frame.uva
samples2/uva-ui/calculator/themes/: dark_theme.uva  light_theme.uva
src/: add_operators.hpp  andy.cpp  andy_config_class.cpp  andyc++.cpp  array_class.cpp  class.cpp  config.cpp  dictionary_class.cpp  double_class.cpp  extension.cpp  false_class.cpp  file_class.cpp  float_class.cpp  integer_class.cpp  interpreter.cpp  lexer.cpp  method.cpp  null_class.cpp  object.cpp  parser.cpp  path_class.cpp  preprocessor.cpp  std_class.cpp  string_class.cpp  system_class.cpp  true_class.cpp
tests/andy/: cases_spec.cpp
tests/andy/cases/for/increasing iterator/: 10.andy
tests/andy/cases/if/: 1.andy  2.andy  3.andy  4.andy
tests/andy/cases/interpolation/: 1.andy  2.andy  3.andy
tests/andy/cases/operators/integers/: 1.++.andy  1.+.andy  1.+=.andy
tests/andy/cases/puts/: main.andy
tests/andy/cases/returning/: 2.variable.andy
tests/andy/cases/system/: main.andy
tests/andy/cases/while/: 5.andy
utility/: release.uva  update.andy
uva/: uva.cpp
uva-ui/: CMakeLists.txt  app.hpp  frame.hpp  implmement_app.hpp  os_specific_data_member.hpp  style.hpp  theme.hpp
uva-ui/include/: app_class.hpp  frame_class.hpp
uva-ui/src/: app_class.cpp  frame_class.cpp  style.cpp  theme.cpp  ui.cpp
uva-ui/src/GTK3/: frame.cpp  implement_app.hpp
uva-ui/src/WIN32/: app.cpp  frame.cpp  implement_app.hpp
uva-ui/src/gtk3/: app.cpp  frame.cpp
uva-wx/: CMakeLists.txt
uva-wx/src/: lib.cpp  main.cpp  output.hpp  wx-extension.cpp
uva/src/: main.cpp  uva.cpp  winmain.cpp
uvalang-analyser/: CMakeLists.txt
uvalang-analyser/src/: analyser.cpp
uvalang-debugger/: CMakeLists.txt
uvalang-debugger/src/: debugger.cpp
uvalang-vscode/: README.md  package-lock.json  package.json  uvalang-0.0.1.vsix
uvalang-vscode/src/: extension.ts
uvao/: CMakeLists.txt
uvao/src/: uvao.cpp
vm/: CMakeLists.txt  vm.hpp
vm/src/: vm.cpp
win32/: installer.cpp  resource.h  resources.rc
xml/: CMakeLists.txt
xml/src/: schema.cpp  xml.cpp
xml/uva/: xml.hpp
xml/uva-tests/uva-xml/: xml_spec.cpp
